обновил получение периодов и цен
