# app/Http/Controllers/PeriodController.php
@@ -2,8 +2,10 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\PeriodListRequest;
 use App\Http\Resources\PeriodResource;
 use App\Http\Services\PeriodService;
+use App\Models\User;
 
 class PeriodController
 {
@@ -16,12 +18,18 @@ class PeriodController
      *     path="/api/v1/periods",
      *     tags={"Periods"},
      *     summary="Список периодов",
+     *     @OA\Parameter(
+     *         name="telegram_id",
+     *         in="query",
+     *         description="Telegram ID пользователя",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
      *     @OA\Response(
      *         response=200,
      *         description="Successful operation",
      *         @OA\JsonContent(
      *             type="object",
-     *             @OA\Property(property="total", type="integer", example=100),
      *             @OA\Property(
      *                 property="data",
      *                 type="array",
@@ -31,9 +39,11 @@ class PeriodController
      *     )
      * )
      */
-    public function index()
+    public function index(PeriodListRequest $request)
     {
-        $periods = $this->service->listPeriods();
+        $telegramId = $request->validated()['telegram_id'];
+        $user = User::where('telegram_id', $telegramId)->first();
+        $periods = $this->service->listPeriods($user);
         return ['periods' => PeriodResource::collection($periods)];
     }
 }
